--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
@@ -26,19 +25,15 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^15.0.0",
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
     "jest-preset-angular": "^13.0.1",
+    "ts-jest": "^29.1.0",
     "typescript": "~4.9.4"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/setup-jest.ts"
-    ],
-    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
