--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": true,
+    "strictPropertyInitialization": false,
     "lib": [
       "ES2022",
       "dom"
